plugins {
	id "architectury-plugin" version "3.4-SNAPSHOT"
	id "dev.architectury.loom" version "1.2-SNAPSHOT" apply false
	id "com.matthewprenger.cursegradle" version "1.4.0" apply false
}

architectury {
	minecraft = rootProject.minecraft_version
}

subprojects {
	apply plugin: "dev.architectury.loom"

	loom {
		silentMojangMappingsLicense()
	}

	dependencies {
		minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
		mappings loom.officialMojangMappings()
	}
}

allprojects {
	apply plugin: "java"
	apply plugin: "architectury-plugin"
	apply plugin: "maven-publish"
	apply from: "https://raw.githubusercontent.com/FTBTeam/mods-meta/main/gradle/git-md-changelog.gradle"

	def ENV = System.getenv()
	version = mod_version
	group = project.maven_group
	archivesBaseName = project.archives_base_name

	// needs to be done AFTER version is set
	apply from: "https://raw.githubusercontent.com/FTBTeam/mods-meta/main/gradle/publishing.gradle"

	sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = 17

	compileJava {
		options.encoding = "UTF-8"
	}

	repositories {
		mavenLocal()
		maven {
			url "https://maven.architectury.dev/"
		}

		maven {
			url "https://maven.saps.dev/releases"
			content {
				includeGroup "dev.latvian.mods"
				includeGroup "dev.ftb.mods"
			}
		}

		maven {
			url "https://maven.saps.dev/snapshots"
			content {
				includeGroup "dev.latvian.mods"
				includeGroup "dev.ftb.mods"
			}
		}
	}

	java {
		withSourcesJar()
	}
}

task curseforgePublish
